# MyBestFriend

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Possible-improvement.md  README.md  Requirement-Form.md  config.yaml  main.py  plan.md  pyproject.toml
backend/: config.yaml  pyproject.toml  requirements.txt
backend/data/: url_metadata.json
backend/data/career/: NUS-Research-Engineer.md
backend/data/cv/: cv.md
backend/data/personal/: hobby.md
backend/src/: RAG_evaluator.ipynb  agent_skills.py  agent_state.py  agent_tools.py  api_server.py  conversation_graph.py  document_ops.py  domain_constants.py  eval.py  eval_dataset_store.py  main.py  mcp_client.py  mcp_server.py  multi_agent_eval.py  multi_agent_graph.py  rag_ingestion.py  rag_retrieval.py  test_jupyter_improved_RAG.ipynb  tool_registry.py  twin_tools.py
backend/utils/: base_models.py  config_loader.py  path_setup.py  prompt_manager.py  prompts.py  smtp_send.py  supabase_client.py
data/: cv.md  hobby.md  urls.txt  www.linkedin.com.txt
data/career/: NUS-Research-Engineer.md  UOB-Software-Engineer.md
data/cv/: cv.md
data/personal/: hobby.md
data/projects/: Developer-Portal.md  LLM-Based-Code-Reviewer.md  NUS-Master-Project.md  Prompt-Library.md
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
frontend/tests/: screenshots.spec.ts
src/: RAG_evaluator.ipynb  base_models.py  config_loader.py  main.py  rag_ingestion.py  rag_retrieval.py  test_jupyter_basic_RAG.ipynb  test_jupyter_improved_RAG.ipynb
utils/: config_loader.py  prompts.py
(+71 files in other folders)
