[project]
name = "mybestfriend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "openai>=2.16.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
